--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<styles>
+  p {
+    font-family: sans-serif;
+    font-size: 30px;
+  }
+</styles>
+
+<p>How did we celebrate our anniversary when I drove up from Hartford? Searching a map might help you find the right place to relax.<p.
+                                                                                                                                        
+<p>Here’s a clue to help you find the right location: You cross this river when going from Manhattan to New Jersey.</p>
+  
+<p>Try to get there by 11:30 AM!</p>
