--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+
 <styles>
   p {
     font-family: sans-serif;
@@ -10,3 +12,4 @@
 <p>Here’s a clue to help you find the right location: You cross this river when going from Manhattan to New Jersey.</p>
   
 <p>Try to get there by 11:30 AM!</p>
+</html>
