--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   }
 </styles>
 
-<p>How did we celebrate our anniversary when I drove up from Hartford? Searching a map might help you find the right place to relax.<p.
+<p>How did we celebrate our anniversary when I drove up from Hartford? Searching a map might help you find the right place to relax.</p>
                                                                                                                                         
 <p>Here’s a clue to help you find the right location: You cross this river when going from Manhattan to New Jersey.</p>
   
