--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 
-<styles>
+<style>
   p {
     font-family: sans-serif;
     font-size: 30px;
   }
-</styles>
+</style>
 
 <p>How did we celebrate our anniversary when I drove up from Hartford? Searching a map might help you find the right place to relax.</p>
                                                                                                                                         
