--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 
 <style>
   p {
-    font-family: sans-serif;
-    font-size: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 24px;
+  }
+  img {
+    max-width: 100%;
   }
 </style>
 
+<img src="https://media2.giphy.com/media/I8eorWE0QuYYU/giphy.gif">
+  
 <p>How did we celebrate our anniversary when I drove up from Hartford? Searching a map might help you find the right place to relax.</p>
                                                                                                                                         
-<p>Here’s a clue to help you find the right location: You cross this river when going from Manhattan to New Jersey.</p>
+<p>Here’s a clue to help you find the right location: You cross <strong>this river</strong> when going from Manhattan to New Jersey.</p>
   
 <p>Try to get there by 11:30 AM!</p>
 </html>
