Add wedding website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+  <meta charset="utf-8">
+  <title>Jeena &amp; Kevin</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:400,700|Work+Sans:400,700" rel="stylesheet">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+  <link rel="stylesheet" href="css/bulma.css">
+  <link rel="stylesheet" href="css/style.css">
+
+</head>
+<body>
+
+<!-- Index
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<section class="hero is-main is-fullheight">
+  <div class="hero-head">
+    <div class="container">
+      <div class="tabs is-centered flower">
+        <img src="images/flower.png">
+      </div>
+    </div>
+  </div>
+
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <h3 class="nameHeader">
+        Jeena Hah<br/>&amp;<br/>Kevin Chang
+      </h3>
+      <h4 class="infoHeader">
+        Saturday, November 10, 2018<br />11 AM - 4 PM
+      </h4>
+
+      <br /><br />
+
+      <a href="ourstory.html" class="button clearBtn">
+        <span>More Info</span>
+        <span class="icon is-small">
+          <i class="fas fa-chevron-right"></i>
+        </span>
+      </a>
+    </div>
+  </div>
+
+  <div class="hero-foot">
+    <div class="container">
+      <div class="tabs is-centered flower reverse">
+        <img src="images/flower.png">
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Index
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+</body>
+</html>
