--- a/index.html
+++ b/index.html
@@ -420,24 +420,27 @@
         </h2>
       </header>
       <div class="fn fl-ns w-40-ns">
-        <div class="mb4 mb0-ns w-100 pr4-ns">
+        <!-- <div class="mb4 mb0-ns w-100 pr4-ns">
           <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db rounded-image">
+        </div> -->
+        <div class="mb4 mb0-ns w-100 w-90-ns ba bw1 b--blue pa3 mr3 br2">
+          <p class="fw2 f1 ma0 pa0 blue">LAX</p>
+          <p class="f6 lh-copy dark-gray fw7 ttu">Los Angeles Airport (LAX)</p>
+          <p class="f5 lh-copy mt0-ns mb0">
+            90 minute drive from Cooks Chapel<br />
+            There are direct flights to BOS to LAX
+          </p>
         </div>
-        <p class="f6 lh-copy dark-gray fw7 ttu">Los Angeles Airport (LAX)</p>
-        <p class="f5 lh-copy mt0-ns">
-          90 minute drive from Cooks Chapel<br />
-          There are direct flights to BOS to LAX
-        </p>
       </div>
       <div class="fn fl-ns w-40-ns">
-        <div class="mb4 mb0-ns w-100 pr4-ns">
-          <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db rounded-image">
+        <div class="mb4 mb0-ns w-100 w-90-ns ba bw1 b--orange pa3 mr3 br2">
+          <p class="fw2 f1 ma0 pa0 orange">SNA</p>
+          <p class="f6 lh-copy dark-gray fw7 ttu">Orange County Airport (SNA)</p>
+          <p class="f5 lh-copy mt0-ns mb0">
+            20 minute drive from Cooks Chapel<br />
+            There are one-stop flights from BOS to SNA
+          </p>
         </div>
-        <p class="f6 lh-copy dark-gray fw7 ttu">Orange County Airport (SNA)</p>
-        <p class="f5 lh-copy mt0-ns">
-          20 minute drive from Cooks Chapel<br />
-          There are one-stop flights from BOS to SNA
-        </p>
       </div>
     </article>
   </section>
