Changed easter egg

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </blockquote>
     </div>
 
-    <div onclick="changeTitle()" class="flower reverse flex-auto">
-      <img src="images/flower.png">
+    <div class="flower reverse flex-auto">
+      <img onclick="changeTitle()" src="images/flower.png">
     </div>
     <nav class="bt tc center">
     <a class="f6 f5-l link black-80 dim dib pa3 ph4-l" href="#our-story">Our Story</a>
