--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 </section>
 
 <section class="mw8 center">
-  <img src="http://tachyons.io/img/over-canvas.jpg" class="w-100 rounded-image shadow">
+  <div class="pt4 pl4 pr4 tc">
+    <img src="http://tachyons.io/img/logo.jpg" class="br-100 h5 w5 dib shadow">
+  </div>
 </section>
 
 <section class="mw8 center">
@@ -463,7 +465,7 @@
           </div>
         </a>
         <p class="f5 lh-copy mt0-ns">
-          We have arranged for a block of rooms to be reserved at this hotel, a short ride from Cooks Chapel.
+          We reserved a block of double bed rooms at this hotel, a short ride from Cooks Chapel.
         </p>
         <p class="f5 lh-copy mt0-ns">
           (Approximately $89/night + tax)
