--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="flower reverse flex-auto">
       <img onclick="changeTitle()" src="images/flower.png">
     </div>
-    <nav class="bt tc center">
+    <nav class="bt b--black-50 tc center">
     <a class="f6 f5-l link black-80 dim dib pa3 ph4-l" href="#our-story">Our Story</a>
     <a class="f6 f5-l link black-80 dim dib pa3 ph4-l" href="#bridal-party">Bridal Party</a>
     <a class="f6 f5-l link black-80 dim dib pa3 ph4-l" href="#events">Events</a>
@@ -60,7 +60,7 @@
 </section>
 
 <section class="mw8 center">
-  <article class="cf ph3 ph5-ns pv5">
+  <article class="cf ph3 ph4-ns pv4">
     <div class="fn fl-ns w-50-ns pr4-ns">
       <p class="f5 lh-copy mt0-ns">
         TYPOGRAPHY, even when poorly executed, can never be taken for granted;
@@ -112,12 +112,10 @@
     <h1 class="f3 mt2 mb4 tc light-gray">Bridal Party</h1>
   </section>
 
-
-
-  <section class="mw8 center">
+  <section class="mw8 center pb2">
     <ul class="cf list pl0 ml0">
       <li class="fl w-100 w-50-ns">
-        <div class="pl4 pr4">
+        <div class="pl3 pr4 pl4-ns pl4-ns">
           <div class="dt w-100 pb2 mt2">
             <div class="dtc v-top pr3">
               <h1 class="f3 fw5 mt0 mb0 lh-title light-gray">Esther Hah</h1>
@@ -135,7 +133,7 @@
         </div>
       </li>
       <li class="fl w-100 w-50-ns">
-        <div class="pl4 pr4">
+        <div class="pl3 pr4 pl4-ns pl4-ns">
           <div class="dt w-100 pb2 mt2">
             <div class="dtc v-top pr3">
               <h1 class="f3 fw5 mt0 mb0 lh-title light-gray">Richard Ho</h1>
@@ -155,7 +153,7 @@
     </ul>
     <ul class="cf list pl0 ml0">
       <li class="fl w-100 w-50-ns">
-        <div class="pl4 pr4">
+        <div class="pl3 pr4 pl4-ns pl4-ns">
           <div class="dt w-100 pb2 mt2">
             <div class="dtc v-top pr3">
               <h1 class="f3 fw5 mt0 mb0 lh-title light-gray">Name</h1>
@@ -173,7 +171,7 @@
         </div>
       </li>
       <li class="fl w-100 w-50-ns">
-        <div class="pl4 pr4">
+        <div class="pl3 pr4 pl4-ns pl4-ns">
           <div class="dt w-100 pb2 mt2">
             <div class="dtc v-top pr3">
               <h1 class="f3 fw5 mt0 mb0 lh-title light-gray">Name</h1>
@@ -193,7 +191,7 @@
     </ul>
     <ul class="cf list pl0 ml0">
        <li class="fl w-100 w-50-ns">
-        <div class="pl4 pr4">
+        <div class="pl3 pr4 pl4-ns pl4-ns">
           <div class="dt w-100 pb2 mt2">
             <div class="dtc v-top pr3">
               <h1 class="f3 fw5 mt0 mb0 lh-title light-gray">Name</h1>
@@ -211,7 +209,7 @@
         </div>
       </li>
       <li class="fl w-100 w-50-ns">
-        <div class="pl4 pr4">
+        <div class="pl3 pr4 pl4-ns pl4-ns">
           <div class="dt w-100 pb2 mt2">
             <div class="dtc v-top pr3">
               <h1 class="f3 fw5 mt0 mb0 lh-title light-gray">Name</h1>
@@ -231,7 +229,7 @@
     </ul>
     <ul class="cf list pl0 ml0">
        <li class="fl w-100 w-50-ns">
-        <div class="pl4 pr4">
+        <div class="pl3 pr4 pl4-ns pl4-ns">
           <div class="dt w-100 pb2 mt2">
             <div class="dtc v-top pr3">
               <h1 class="f3 fw5 mt0 mb0 lh-title light-gray">Name</h1>
@@ -249,7 +247,7 @@
         </div>
       </li>
       <li class="fl w-100 w-50-ns">
-        <div class="pl4 pr4">
+        <div class="pl3 pr4 pl4-ns pl4-ns">
           <div class="dt w-100 pb2 mt2">
             <div class="dtc v-top pr3">
               <h1 class="f3 fw5 mt0 mb0 lh-title light-gray">Name</h1>
@@ -269,7 +267,7 @@
     </ul>
     <ul class="cf list pl0 ml0">
        <li class="fl w-100 w-50-ns">
-        <div class="pl4 pr4">
+        <div class="pl3 pr4 pl4-ns pl4-ns">
           <div class="dt w-100 pb2 mt2">
             <div class="dtc v-top pr3">
               <h1 class="f3 fw5 mt0 mb0 lh-title light-gray">Name</h1>
@@ -287,7 +285,7 @@
         </div>
       </li>
       <li class="fl w-100 w-50-ns">
-        <div class="pl4 pr4">
+        <div class="pl3 pr4 pl4-ns pl4-ns">
           <div class="dt w-100 pb2 mt2">
             <div class="dtc v-top pr3">
               <h1 class="f3 fw5 mt0 mb0 lh-title light-gray">Name</h1>
@@ -321,7 +319,7 @@
 
 <div class="relative">
   <div class="absolute top-0 right-0 white">
-    You found an easter egg!
+    You found a secret 🍕!
   </div>
 </div>
 
@@ -347,8 +345,8 @@
         Cooks Chapel is accessed through the north entry to the Anaheim Packing House, down the steps to a private entry near the BXCR wine bar.
       </p>
       <p class="f5 mt0 lh-copy">
-        $3/per car valet<br />
-        Street parking also available near the Anaheim Packing House
+        &rarr; $3/per car valet<br />
+        &rarr; Street parking also available near the Anaheim Packing House
       </p>
     </div>
   </article>
@@ -422,15 +420,12 @@
         </h2>
       </header>
       <div class="fn fl-ns w-40-ns">
-        <!-- <div class="mb4 mb0-ns w-100 pr4-ns">
-          <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db rounded-image">
-        </div> -->
         <div class="mb4 mb0-ns w-100 w-90-ns ba bw1 b--blue pa3 mr3 br2">
           <p class="fw2 f1 ma0 pa0 blue">LAX</p>
           <p class="f6 lh-copy dark-gray fw7 ttu">Los Angeles Airport (LAX)</p>
           <p class="f5 lh-copy mt0-ns mb0">
-            90 minute drive from Cooks Chapel<br />
-            There are direct flights to BOS to LAX
+            &rarr; 90 minute drive from Cooks Chapel<br />
+            &rarr; There are direct flights to BOS to LAX
           </p>
         </div>
       </div>
@@ -439,8 +434,8 @@
           <p class="fw2 f1 ma0 pa0 orange">SNA</p>
           <p class="f6 lh-copy dark-gray fw7 ttu">Orange County Airport (SNA)</p>
           <p class="f5 lh-copy mt0-ns mb0">
-            20 minute drive from Cooks Chapel<br />
-            There are one-stop flights from BOS to SNA
+            &rarr; 20 minute drive from Cooks Chapel<br />
+            &rarr; There are one-stop flights from BOS to SNA
           </p>
         </div>
       </div>
@@ -465,10 +460,8 @@
           </div>
         </a>
         <p class="f5 lh-copy mt0-ns">
-          We reserved a block of double bed rooms at this hotel, a short ride from Cooks Chapel.
-        </p>
-        <p class="f5 lh-copy mt0-ns">
-          (Approximately $89/night + tax)
+          &rarr; We reserved a block of double bed rooms at this hotel, a short ride from Cooks Chapel.<br />
+          &rarr; (Approximately $89/night + tax)
         </p>
         <a href="#" class="f6 no-underline dark-gray bg-animate hover-black inline-flex items-center pa3 mt0 ba br2 border-box">
         <span class="pr1">Reserve a room</span>
@@ -579,7 +572,7 @@
 <!-- End Registry
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 <!-- Bonus
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <div class="flex items-center justify-center pa4 bg-near-white">
@@ -587,25 +580,25 @@
     <title>info icon</title>
     <path d="M16 0 A16 16 0 0 1 16 32 A16 16 0 0 1 16 0 M19 15 L13 15 L13 26 L19 26 z M16 6 A3 3 0 0 0 16 12 A3 3 0 0 0 16 6"></path>
   </svg>
-  <span class="lh-title ml3">There are <strong>three</strong> easter eggs to be found. First person to email me with screenshots gets a prize.</span>
+  <span class="lh-title ml3">There are <strong>four</strong> secret pizzas to be found. Email me with screenshots to get the next clue.</span>
 </div>
 <!-- End Bonus
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
 <!--
-You found an easter egg!
+Finish the maze to get the secret pizza 🍕!
 
 
    .===============================================================.
    |  ,-----------------,                                          |
    | /| HELP THE BUNNY  |==========.===.   .===.   .===========.   |
-   || |    FIND HIS     |          |   |   |   |   |      .-.  | E |
-   || |  EASTER EGGS!   |  |===|   |   |   |   |   |..==./xxx\ | N |
-   || |_________________|          |   |       |   /<<<<<\    || D |
-   ||/_________________/   .======='   |   .   |   \>>>>>/xxxx/--. |
-   |   |   |           |   |           |   |   |   |`'==''---; * *`\
-   |   |   '==========='   |   |======='   |   |   |   ,===. \* * */
-   |   |                   |               |   |   |   |   |  '--'`|
+   || |    FIND HIS     |          |   |   |   |   |           | E |
+   || |     PIZZA!      |  |===|   |   |   |   |   |           | N |
+   || |_________________|          |   |       |   |           | D |
+   ||/_________________/   .======='   |   .   |   |     🍕    |   |
+   |   |   |           |   |           |   |   |   |           |   |
+   |   |   '==========='   |   |======='   |   |   |   ,===.   |   |
+   |   |                   |               |   |   |   |   |       |
    |   '===============|   '===.   |===.   |   |   |==='   '=======|
    |                           |       |   |   |   |               |
    |   |===============.   .   '===|   |   |===|   |   .=======.   |
