--- a/index.html
+++ b/index.html
@@ -559,6 +559,11 @@
   </div>
   <h1 class="f3 mt2 mb4 tc">Registry</h1>
 </section>
+<div class="relative">
+  <div class="absolute top-0 left-0 white">
+    You found a secret 🍕!
+  </div>
+</div>
 
 <section class="mw7 center">
   <article class="cf ph3 ph5-ns pv3">
@@ -580,7 +585,7 @@
     <title>info icon</title>
     <path d="M16 0 A16 16 0 0 1 16 32 A16 16 0 0 1 16 0 M19 15 L13 15 L13 26 L19 26 z M16 6 A3 3 0 0 0 16 12 A3 3 0 0 0 16 6"></path>
   </svg>
-  <span class="lh-title ml3">There are <strong>four</strong> secret pizzas to be found. Email me with screenshots to get the next clue.</span>
+  <span class="lh-title ml3">There are <strong>five</strong> secret pizzas 🍕 to be found. Email me with screenshots for the next clue.</span>
 </div>
 <!-- End Bonus
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
