Added Kissy's photo

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               </p>
             </div>
             <div class="dtc w4-ns w3 br2 h3">
-              <img src="#" class="br2 h4-ns w4-ns h3 w3 dib">
+              <img src="images/people_kissy.png" class="br2 h4-ns w4-ns h3 w3 dib">
             </div>
           </div>
         </div>
