--- a/index.html
+++ b/index.html
@@ -723,16 +723,32 @@
   </section>
 
   <article>
-    <div class="cf ph3 ph5-ns pv3">
-      <div class="w-80 w-60-m w-30-l center">
-        <a href="https://www.zola.com/registry/jeenaandkevin" class="db link dim tc" target="_blank">
-          <img src="images/img_zola.svg" class="w-60 center pa4 db outline black-10 bg-white" style="box-sizing: border-box;" />
-          <dl class="mt2 f6 lh-copy">
-            <dd class="ml0 black w-100">Zola Registry</dd>
-            <dd class="ml0 gray w-100">Link to registry</dd>
-          </dl>
-        </a>
+    <div class="cf ph3 ph5-ns pv3 mw7 center">
+
+      <div class="fn fl-ns w-50-ns w-100-m">
+        <div class="w-80 w-80-m w-100-l center">
+          <a href="https://www.zola.com/registry/jeenaandkevin" class="db link dim tc" target="_blank">
+            <img src="images/img_zola.svg" class="w-60 center pa4 db outline black-10 bg-white" style="box-sizing: border-box;" />
+            <dl class="mt2 f6 lh-copy">
+              <dd class="ml0 black w-100">Zola Registry</dd>
+              <dd class="ml0 gray w-100">Link to registry</dd>
+            </dl>
+          </a>
+        </div>
       </div>
+
+      <div class="fn fl-ns w-50-ns w-100-m">
+        <div class="w-80 w-80-m w-100-l center">
+          <a href="https://www.amazon.com/wedding/kevin-chang-jeena-hah-anaheim-november-2018/registry/1MYI5Q84UXPU8" class="db link dim tc" target="_blank">
+            <img src="images/img_amazon.svg" class="w-60 center pa4 db outline black-10 bg-white" style="box-sizing: border-box;" />
+            <dl class="mt2 f6 lh-copy">
+              <dd class="ml0 black w-100">Amazon Registry</dd>
+              <dd class="ml0 gray w-100">Link to registry</dd>
+            </dl>
+          </a>
+        </div>
+      </div>
+
     </div>
   </article>
 </div>
