--- a/sloth.html
+++ b/sloth.html
@@ -17,19 +17,25 @@
       position: relative;
       display: flex;
     }
+    body {
+      background-image: url(images/space.jpg);
+      background-size: cover;
+      background-position: center bottom;
+    }
     .marquee {
       display: block;
       left: 0;
       position: absolute;
       top: 0;
-      width: 75px;
-      height: 75px;
+      width: 120px;
+      height: 81px;
     }
     .score {
       display: flex;
       justify-content: center;
       align-items: center;
       width: 100%;
+      color: white;
     }
   </style>
 </head>
@@ -38,7 +44,7 @@
 <div class="score"></div>
 
 <div class="marquee">
-  <img src="sloth.jpeg">
+  <img src="images/sloth.png">
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -52,7 +58,7 @@
       container: $(this).parent(),
       slowDown: function () {}
     }, options);
-    
+
     return this.each(function () {
       var containerWidth, containerHeight, elWidth, elHeight, move, getSizes,
         $el = $(this);
@@ -105,7 +111,7 @@
 
 $(document).ready( function() {
   $('.marquee').marqueeify({
-    speed: 200,
+    speed: 400,
   });
 
   var score = 0;
@@ -115,7 +121,7 @@ $(document).ready( function() {
       $(".score").html("Score: " + score);
     } else {
       $(".score").html("You win!");
-    }  
+    }
   });
 });
 </script>
