--- a/sloths.html
+++ b/sloths.html
@@ -41,7 +41,9 @@
 </head>
 <body>
 
-<div class="score"></div>
+<div class="score">
+  The sloth is hungry...
+</div>
 
 <div class="marquee">
   <img src="images/sloth.png">
@@ -111,7 +113,7 @@
 
 $(document).ready( function() {
   $('.marquee').marqueeify({
-    speed: 400,
+    speed: 100,
   });
 
   var score = 0;
@@ -120,7 +122,7 @@ $(document).ready( function() {
       score = score + 100;
       $(".score").html("Score: " + score);
     } else {
-      $(".score").html("You win!");
+      document.location.href = "kevinandjeena.com/end.html";
     }
   });
 });
